tests/ui-tests/tests/cases/inline-fragment-fallback-validation.stderr
error: InlineFragments fallbacks on a union must be a unit variant
  --> tests/cases/inline-fragment-fallback-validation.rs:15:5
   |
15 |     #[cynic(fallback)]
   |     ^
